fix: by removing scrollbar in Greeting area

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@
 }
 h2{
     margin-left: 230px;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 .topbar img{
     width: 20;
@@ -98,13 +98,13 @@ h2{
     margin-left: 270px;
     margin-right: 180px ;
 }
+
 textarea {
     margin-left: 13px;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 13px;
     padding: 10px;
-    word-break: 1;
     line-height: 3.5;
     width: 230;
     border-radius: 5px;
